# bilinear-interpolation

./: Cargo.toml  LICENSE  README.md  package.json
json/: index.js
src/: lib.rs  main.rs
src/init_data/: init_json.rs  mod.rs
