[package]
name = "bilinear-interpolation"
version = "0.1.0"
edition = "2021"

# wasm-pack build --release --target web
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"


[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
